Play and Stop implemented

--- a/CloudVideoPlayer.Components/.mateconfig.json
+++ b/CloudVideoPlayer.Components/.mateconfig.json
@@ -5,8 +5,7 @@
 			"js": {
 				"minify": true,
 				"sourceMap": false,
-				"declaration": false,
-				"webClean": true
+				"declaration": false
 			}
 		}
 	],
@@ -18,10 +17,6 @@
 		{
 			"output": "wwwroot/cloudvideoplayer.js",
 			"input": "wwwroot/cloudvideoplayer.ts"
-		},
-		{
-			"output": "CloudVideoPlayer.razor.css",
-			"input": "CloudVideoPlayer.razor.less"
 		}
 	]
 }
