--- a/Components/Components.csproj
+++ b/Components/Components.csproj
@@ -13,9 +13,9 @@
 
   <ItemGroup>
     <Content Include="General\js\DotNet.d.ts" />
-    <Content Include="ProgressBar\ProgressBar.razor.less" />
+    <Content Include="ProgressBar\progressbar.less" />
     <Content Include="ProgressBar\progressbar.ts" />
-    <Content Include="VideoPlayer\VideoPlayer.razor.less" />
+    <Content Include="VideoPlayer\videoplayer.less" />
     <Content Include="VideoPlayer\videoplayer.ts" />
   </ItemGroup>
 
