--- a/.github/workflows/amcComponentsDemo.yml
+++ b/.github/workflows/amcComponentsDemo.yml
@@ -8,16 +8,16 @@ env:
   AZURE_WEBAPP_PACKAGE_PATH: Demo/publish
   AZURE_WEBAPP_PUBLISH_PROFILE: ${{ secrets.amcComponentsDemo_8eeb }}
   CONFIGURATION: Release
-  DOTNET_CORE_VERSION: 5.0.x
+  DOTNET_CORE_VERSION: 6.0.x
   WORKING_DIRECTORY: Demo
 jobs:
   build-and-deploy:
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Setup .NET Core
-      uses: actions/setup-dotnet@v1
+    - uses: actions/setup-dotnet@v1.8.0
       with:
+        include-prerelease: True
         dotnet-version: ${{ env.DOTNET_CORE_VERSION }}
     - name: Restore
       run: dotnet restore "${{ env.WORKING_DIRECTORY }}"
