--- a/Demo/Demo.csproj
+++ b/Demo/Demo.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\Components\Components.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\css\" />
+  </ItemGroup>
+
 </Project>
