--- a/Demo/Properties/launchSettings.json
+++ b/Demo/Properties/launchSettings.json
@@ -11,6 +11,7 @@
     "CloudVideoPlayer.Website": {
       "commandName": "Project",
       "launchBrowser": true,
+      "launchUrl": "videoplayer",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
