DateTimePicker: fixed all bugs related to previous and next month + UI: added the current year next to the month name in the header

--- a/Demo/Properties/launchSettings.json
+++ b/Demo/Properties/launchSettings.json
@@ -11,7 +11,7 @@
     "CloudVideoPlayer.Website": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "videoplayer",
+      "launchUrl": "datetimepicker",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
