VideoPlayer: Icons updated

--- a/Demo/Properties/launchSettings.json
+++ b/Demo/Properties/launchSettings.json
@@ -11,7 +11,7 @@
     "CloudVideoPlayer.Website": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "datetimepicker",
+      "launchUrl": "videoplayer",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
