DateTimePicker: Fine tuning

--- a/Components/.mateconfig.json
+++ b/Components/.mateconfig.json
@@ -35,6 +35,10 @@
 			"input": "DateTimePicker/DateTimePicker.less"
 		},
 		{
+			"output": "DateTimePicker/Partials/DateTimePickerNavigation.razor.css",
+			"input": "DateTimePicker/Partials/DateTimePickerNavigation.less"
+		},
+		{
 			"output": "GridView/GridView.razor.css",
 			"input": "GridView/GridView.less"
 		},
