--- a/Components/Components.csproj
+++ b/Components/Components.csproj
@@ -24,6 +24,7 @@
 	</ItemGroup>
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="5.0.7" />
+		<PackageReference Include="Microsoft.JSInterop" Version="5.0.11" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -32,7 +33,6 @@
 
 	<ItemGroup>
 		<Folder Include="GridView\" />
-		<Folder Include="VolumeBar\" />
 	</ItemGroup>
 
 	<ItemGroup>
