--- a/Components/.mateconfig.json
+++ b/Components/.mateconfig.json
@@ -27,6 +27,10 @@
 			"input": "ProgressBar/progressbar.ts"
 		},
 		{
+			"output": "VolumeBar/VolumeBar.razor.css",
+			"input": "VolumeBar/VolumeBar.less"
+		},
+		{
 			"output": "wwwroot/pagebase/pagebase.js",
 			"input": "pagebase/pagebase.ts"
 		},
