Play and Pause icons linked to the Video Player

--- a/Components/Components.csproj
+++ b/Components/Components.csproj
@@ -15,6 +15,13 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <Compile Remove="Icons\**" />
+	  <Content Remove="Icons\**" />
+	  <EmbeddedResource Remove="Icons\**" />
+	  <None Remove="Icons\**" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<Content Remove=".mateconfig.json" />
 		<Content Remove="tsconfig.json" />
 	</ItemGroup>
@@ -38,12 +45,6 @@
 		<None Include=".mateconfig.json">
 			<CopyToOutputDirectory>Never</CopyToOutputDirectory>
 		</None>
-		<None Include="Icons\AngryMonkeyCloudLogo.razor" />
-		<None Include="Icons\Loading.razor" />
-		<None Include="Icons\PauseButton.razor" />
-		<None Include="Icons\PlayButton.razor" />
-		<None Include="Icons\Volume.razor" />
-		<None Include="Icons\VolumeMute.razor" />
 		<None Include="tsconfig.json">
 			<CopyToOutputDirectory>Never</CopyToOutputDirectory>
 		</None>
