--- a/Demo/Demo.csproj
+++ b/Demo/Demo.csproj
@@ -6,6 +6,7 @@
     <RootNamespace>AngryMonkey.Cloud.Components.Demo</RootNamespace>
 		<Nullable>enable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
+		<Configurations>Debug;Release;Release_Server</Configurations>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
