--- a/Demo/Demo.csproj
+++ b/Demo/Demo.csproj
@@ -1,36 +1,37 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <AssemblyName>AngryMonkey.Cloud.Components.Demo</AssemblyName>
-    <RootNamespace>AngryMonkey.Cloud.Components.Demo</RootNamespace>
+	<PropertyGroup>
+		<TargetFramework>net6.0</TargetFramework>
+		<AssemblyName>AngryMonkey.Cloud.Components.Demo</AssemblyName>
+		<RootNamespace>AngryMonkey.Cloud.Components.Demo</RootNamespace>
 		<Nullable>enable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Configurations>Debug;Release;Release_Server</Configurations>
-  </PropertyGroup>
+		<Version>1.0.0</Version>
+	</PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <WarningLevel>1</WarningLevel>
-  </PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+		<WarningLevel>1</WarningLevel>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <None Remove="src\js\site.ts" />
-  </ItemGroup>
+	<ItemGroup>
+		<None Remove="src\js\site.ts" />
+	</ItemGroup>
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.0" />
 	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\Components\Components.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\Components\Components.csproj" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <Folder Include="wwwroot\css\" />
-  </ItemGroup>
+	<ItemGroup>
+		<Folder Include="wwwroot\css\" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <TypeScriptCompile Include="src\js\site.ts" />
-  </ItemGroup>
+	<ItemGroup>
+		<TypeScriptCompile Include="src\js\site.ts" />
+	</ItemGroup>
 
 </Project>
