--- a/Components/Components.csproj
+++ b/Components/Components.csproj
@@ -1,7 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
 	<PropertyGroup>
-		<TargetFramework>net6.0</TargetFramework>
+		<TargetFramework>net7.0</TargetFramework>
+		<Nullable>enable</Nullable>
 		<AddRazorSupportForMvc>true</AddRazorSupportForMvc>
 		<AssemblyName>AngryMonkey.Cloud.Components</AssemblyName>
 		<RootNamespace>AngryMonkey.Cloud.Components</RootNamespace>
@@ -15,7 +16,7 @@
 
 		<AssemblyVersion>$(PackageVersion)</AssemblyVersion>
 		<FileVersion>$(PackageVersion)</FileVersion>
-		<Version>2.1.4</Version>
+		<Version>2.2.0</Version>
 		<PackageIcon>AngryMonkeyCloudLogo-64x64.png</PackageIcon>
 		<PackageOutputPath>..\NugetPackage\</PackageOutputPath>
 
@@ -47,7 +48,7 @@
 		<None Remove="ProgressBar\progressbar.min.js" />
 	</ItemGroup>
 	<ItemGroup>
-		<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.0" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="7.0.3" />
 	</ItemGroup>
 
 	<ItemGroup>
