--- a/CloudMVC/CloudMVC.csproj
+++ b/CloudMVC/CloudMVC.csproj
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Components\Components.csproj" />
+    <ProjectReference Include="..\Components.WebAssmbly\Components.WebAssmbly.csproj" />
   </ItemGroup>
 
 
