--- a/Components/Components.csproj
+++ b/Components/Components.csproj
@@ -49,6 +49,7 @@
 	</ItemGroup>
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="7.0.3" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.3" />
 	</ItemGroup>
 
 	<ItemGroup>
