--- a/ServerDemo/ServerDemo.csproj
+++ b/ServerDemo/ServerDemo.csproj
@@ -11,7 +11,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\CloudWeb\CloudWeb\CloudWeb.csproj" />
+    <PackageReference Include="AngryMonkey.CloudWeb" Version="1.0.8" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Components\Components.csproj" />
   </ItemGroup>
 
