--- a/Demo/Demo.csproj
+++ b/Demo/Demo.csproj
@@ -18,6 +18,7 @@
 		<None Remove="src\js\site.ts" />
 	</ItemGroup>
 	<ItemGroup>
+		<PackageReference Include="AngryMonkey.CloudWeb" Version="1.0.8" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.8" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.8" />
 	</ItemGroup>
