fix compoment switch

--- a/ServerDemo/Properties/launchSettings.json
+++ b/ServerDemo/Properties/launchSettings.json
@@ -1,22 +1,14 @@
 {
-  "iisSettings": {
-    "windowsAuthentication": false,
-    "anonymousAuthentication": true,
-    "iisExpress": {
-      "applicationUrl": "http://localhost:49078",
-      "sslPort": 44373
-    }
-  },
   "profiles": {
     "ServerDemo": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "videoplayer",
-      "applicationUrl": "https://localhost:7223;http://localhost:5223",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "dotnetRunMessages": true,
+      "applicationUrl": "https://localhost:7223;http://localhost:5223"
     },
     "IIS Express": {
       "commandName": "IISExpress",
@@ -24,6 +16,14 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
+    }
+  },
+  "iisSettings": {
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
+    "iisExpress": {
+      "applicationUrl": "http://localhost:52007/",
+      "sslPort": 44312
     }
   }
 }
